--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
   "name": "locklift-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "1. Operator creates a wallet on the Venom network\r 2. Operator creates its own DAO by deploying the `AssetFactory` contract\r 3. Operator adds to the whitelist (inside `AssetFactory` `addAuditor()` function) auditors.",
   "scripts": {
     "test": "npx locklift test --network local"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@broxus/tip3": "^1.0.2",
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.0",
     "@types/node": "^18.11.9",
     "chai": "^4.3.7",
     "everscale-standalone-client": "^2.1.11",
-    "locklift": "^2.4.4",
+    "locklift": "^2.9.3",
     "prettier": "^2.7.1",
     "ts-mocha": "^10.0.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "@broxus/contracts": "^1.1.0"
+  },
+  "main": "index.js",
+  "directories": {
+    "test": "test"
   }
 }
